objects/Lead_Scan__c.object
<CustomObject>
    <fields>
        <fullName>BLN_Country__c</fullName>
        <label>BLN Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>BLN Lead Scans</relationshipLabel>
        <relationshipName>BLN_Lead_Scans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BLN_State__c</fullName>
        <label>BLN State</label>
        <referenceTo>State__c</referenceTo>
        <relationshipLabel>BLN Lead Scans</relationshipLabel>
        <relationshipName>BLN_Lead_Scans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BLN_TKT_profile__c</fullName>
        <label>Scanee TKT profile</label>
        <referenceTo>Tkt_profile__c</referenceTo>
        <relationshipLabel>BLN Lead Scans</relationshipLabel>
        <relationshipName>BLN_Lead_Scans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cell_Phone__c</fullName>
        <label>Cell Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <referenceTo>BLN_Event__c</referenceTo>
        <relationshipName>Lead_Scans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadSource__c</fullName>
        <label>LeadSource</label>
        <picklist>
            <picklistValues>
                <fullName>Boothleads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Import</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Email__c</fullName>
        <label>Lead Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Lead_Status__c</fullName>
        <label>Lead Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Deleted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Prefix__c</fullName>
        <label>Prefix</label>
        <picklist>
            <picklistValues>
                <fullName>Mr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mrs.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miss.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dr.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scan_Time__c</fullName>
        <label>Scan Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Scanner_Company__c</fullName>
        <label>Scanner Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipName>Lead_Scans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Scanner_User__c</fullName>
        <label>Scanner User</label>
        <referenceTo>GN_User__c</referenceTo>
        <relationshipName>Lead_Scans1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Street1__c</fullName>
        <label>Street1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street2__c</fullName>
        <label>Street2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suffix__c</fullName>
        <label>Suffix</label>
        <picklist>
            <picklistValues>
                <fullName>Jr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sr.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Phone__c</fullName>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>country__c</fullName>
        <label>country</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>followup_date__c</fullName>
        <label>followup-date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>notes__c</fullName>
        <label>notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>state__c</fullName>
        <label>state</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>user_pic__c</fullName>
        <label>user pic</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>zip__c</fullName>
        <label>zip</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>BLN Lead Scan</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LS-{00000000}</displayFormat>
        <label>Lead Scan Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BLN Lead Scans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>